# Process_Dashboard_API

./: .env.example  .gitignore  Dockerfile  README.FIXED.md  README.md  docker-compose-no-nginx.yml  docker-compose.local.yml  docker-compose.yml  nginx.conf  pyproject.toml
app/: auth.py  auth_router.py  config.py  database.py  main.py  models.py  routers.py  version.py
app/adapters/: automation_server_adapter.py  base.py  registry.py
app/api/: dependencies.py
app/api/v1/: api.py
app/api/v1/endpoints/: __init__.py  admin.py  api_keys.py  audit.py  auth.py  overview.py  processes.py  runs.py  step_runs.py  steps.py  test.py
app/core/: __init__.py  config.py  exceptions.py  pagination.py
app/db/: database.py
app/middleware/: audit_middleware.py  audit_middleware_asgi.py
app/models/: __init__.py  api_key.py  audit_log.py  base.py  enums.py  events.py  process.py  process_run.py  process_step.py  process_step_run.py  retention.py  search.py
app/services/: __init__.py  auth_service.py  process_service.py  rerun_service.py  retention_service.py  run_service.py  search_service.py  step_run_service.py  step_service.py
app/utils/: __init__.py  datetime_utils.py
scripts/: dev.py  docker_setup_api_keys.py  run_status_migration.ps1  setup_api_keys.ps1  setup_api_keys.sh  update_version.py
